# EVo

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  constants.py  conversions.py  density.py  dgs.py  dgs_classes.py  env.yaml  environment.yml  ferric.py  fixed_weights.py  init_cons.py  messages.py  multirun.py  pyproject.toml  readin.py  requirements.txt  sat_pressure.py  solubility_laws.py  solver.py  solvgas.py  testing_file.py  writeout.py
.github/workflows/: test.yml  tests.yml
Data/: CH4.txt  CO.txt  H2.txt  H2O.txt  H2S.txt  N2.txt  OCS.txt  S2.txt  SO2.txt  environment.yml  requirements.txt
docs/: conf.py  evo_doc.rst  index.rst
evo/: __init__.py  __main__.py  conversions.py  density.py  dgs.py  dgs_classes.py  ferric.py  fixed_weights.py  init_cons.py  messages.py  multirun.py  readin.py  sat_pressure.py  solubility_laws.py  solver.py  solvgas.py  writeout.py
evo/Data/: O2.txt
evo/input/: chem.yaml  env.yaml  output.yaml
input_files/: chem.yaml  env.yaml  output.yaml
src/evo/: __init__.py  __main__.py  constants.py  conversions.py  dgs.py  dgs_classes.py  ferric.py  fixed_weights.py  init_cons.py  multirun.py  plots.py  readin.py  sat_pressure.py  solubility_laws.py  solvgas.py  writeout.py
src/evo/data/: CO2.txt
tests/integration/: test_coh.py  test_cohs.py  test_cohsn.py  test_oh.py  test_soh.py
tests/integration/input_files/: env_coh.yaml  env_cohs.yaml  env_cohsn.yaml  env_oh.yaml  env_soh.yaml
tests/unit/: test_conversions.py  test_ferric.py  test_setup_errors.py  test_solubility_laws.py
webapp/: chem.yaml  env.yaml  output.yaml  streamlit-app.py
