[build-system]
requires = ['setuptools>=40.8.0']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
packages = ["evo"]

[project]
name = "EVo"
version = "1.0.1"
authors = [{name = "Philippa Liggins", email = "philippa.liggins@dtc.ox.ac.uk"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3"]
requires-python = ">=3.7"

dependencies = ["numpy>=1.21.0",
  "scipy>=1.7.0",
  "matplotlib>=3.4.2",
  "mpmath>=1.2.1",
  "pyyaml",
  "ruamel.yaml",
  "pandas>=2.1.0",]

[project.urls]
Home = "https://github.com/pipliggins/EVo"

[tool.black]
line-length = 88