[build-system]
requires = ['setuptools>=40.8.0']
build-backend = 'setuptools.build_meta'

[tool.setuptools]

  [tool.setuptools.packages.find]
    where = ["src"]
    include = ["evo*"]

  [tool.setuptools.package-data]
    "evo" = ["data/*.txt"]

[project]
name = "EVo"
version = "1.0.2"
authors = [{name = "Philippa Liggins", email = "philippa.liggins@dtc.ox.ac.uk"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3"]
requires-python = ">=3.9"
scripts = { evo = "evo:main" }

dependencies = ["numpy>=1.21.0",
  "scipy>=1.7.0",
  "matplotlib>=3.4.2",
  "mpmath>=1.2.1",
  "ruamel.yaml",
  "pandas>=2.1.0",]

[project.optional-dependencies]
dev = ["ruff", "pre-commit"]
doc = ["sphinx == 5.3.0"]
web = ["streamlit"]
test = ["pytest"]

[project.urls]
Home = "https://github.com/pipliggins/EVo"

[tool.black]
line-length = 88

[tool.ruff]
exclude = [".venv", ".vscode", ".git",  "docs", "tests"]
# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
extend-select = [
    "E",        # pycodestyle errors (settings from FastAPI, thanks, @tiangolo!)
    "W",        # pycodestyle warnings
    "F",        # pyflakes
    "I",        # isort
    "C",        # flake8-comprehensions
    "B",        # flake8-bugbear
    "ARG",      # flake8-unused-arguments
    "RUF",      # Ruff-specific
    "YTT",      # flake8-2020
]
ignore = ["C901", "W605"]
